Limit task scheduling to working hours, fix bug caused by overlapping events

--- a/client/src/Calendar.css
+++ b/client/src/Calendar.css
@@ -10,7 +10,7 @@
 .day-highlight {
   /* note: !important is needed to add styling to Material-UI components */
   color: #555555 !important;
-  background-color: #F5F5F5 !important;
+  background-color: #F0F0F0 !important;
 }
 
 .day-highlight:hover {
